Improved theme provider and removed flickering issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,20 +1,18 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-html, body{
+html,
+body {
   max-width: 100vw;
 }
 
+html[data-joy-color-scheme="dark"] {
+  background-color: var(--joy-palette-neutral-900)
+}
+
+html[data-joy-color-scheme="light"] {
+  background-color: var(--joy-palette-neutral-200);
+  visibility: visible;
+}
+
 html {
-  overflow-x: hidden;
   overflow-x: hidden;
 }
 
